--- a/recipes/crinkle_cookies.html
+++ b/recipes/crinkle_cookies.html
@@ -9,5 +9,30 @@
 <body>
     <h1>Chocolate Crinkle Cookies</h1>
     <img src="../img/CrinkleCookies.jpeg" alt="Chocolate Crinkle Cookies" width="500" height="500">
+    <h2>Description</h2>
+    <p>
+        Chocolate crinkle cookies have become a holiday staple, but they're also great any time of year. They're cake-like cookies made with unsweetened cocoa powder, vegetable oil, and a handful of other pantry staple ingredients. 
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 Cups White Sugar</li>
+        <li>1 Cup Unsweetened Cocoa Powder</li>
+        <li>1/2 Cup Vegetable Oil</li>
+        <li>4 Large Eggs</li>
+        <li>2 Teaspoons Vanilla Extract</li>
+        <li>2 Cups All-Purpose Flour</li>
+        <li>2 Teaspoons Baking Powder</li>
+        <li>1/2 Teaspoon Salt</li>
+        <li>1/2 Cup Confectioner's Sugar</li>
+    </ul>
+    <h4>Directions</h4>
+    <ol>
+        <li>Mix sugar, cocoa, and oil together in a medium bowl. Beat in eggs, one at a time, until combined. Stir in vanilla.</li>
+        <li>Combine flour, baking powder, and salt in another bowl. Gradually stir dry ingredients into the wet ingredients until thoroughly mixed. Cover dough and refrigerator for at least 4 hours.</li>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Line two baking sheets with parchment paper.</li>
+        <li>Roll or scoop chilled dough into 1-inch balls. Coat each ball in confectioners' sugar and place 1 inch apart on the prepared cookie sheets.</li>
+        <li>Bake in the preheated oven for 10 to 12 minutes. Let stand on the cookie sheet for a few minutes before transferring to wire racks to cool.</li>
+        <li>Repeat Steps 4 and 5 to make remaining batches.</li>
+    </ol>
 </body>
 </html>
