--- a/recipes/gingerbread_cookies.html
+++ b/recipes/gingerbread_cookies.html
@@ -7,6 +7,38 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Gingerbread Cookies</h1>
+    <img src="../img/GingerbreadCookies.jpeg" alt="Gingerbread Cookies" height="500">
+    <h2>Description</h2>
+    <p>
+        Gingerbread cookies are a must for the holidays, and these spiced gingerbread men have a festive taste that doesn't disappoint! Originally titled "Eileen's Spicy Gingerbread Men," this gingerbread cookie recipe is easy to make and fun to decorate with kids. Adjust the spices to your liking, and use any shape cookie cutter for a nice variety of holiday cookies.
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1/2 Cup Margarine, Softened</li>
+        <li>1/2 Cup White Sugar</li>
+        <li>1 Large Egg Yolk</li>
+        <li>1/2 Cup Molasses (Not Blackstrap)</li>
+        <li>2 Cups Sifted All-Purpose Flour</li>
+        <li>1/2 Teaspoon Salt</li>
+        <li>1/2 Teaspoon Baking Powder</li>
+        <li>1/2 Teaspoon Baking Soda</li>
+        <li>1/2 Teaspoon Ground Cinnamon, or to Taste</li>
+        <li>1/2 Teaspoon Ground Cloves, or to Taste</li>
+        <li>1/2 Teaspoon Ground Ginger, or to Taste</li>
+        <li>1/2 Teaspoon Ground Nutmeg, or to Taste</li>
+    </ul>
+    <h4>Directions</h4>
+    <ol>
+        <li>Beat margarine and sugar in a large bowl with an electric mixer on low speed until mostly incorporated, 1 to 2 minutes. Increase speed to medium-high and beat until light and fluffy, another 2 to 3 minutes. Beat in egg yolk, then molasses.</li>
+        <li>Whisk sifted flour, salt, baking powder, baking soda, cinnamon, cloves, ginger, and nutmeg in a separate bowl until well combined. Gradually add flour mixture to the molasses mixture, beating until well blended and smooth.</li>
+        <li>Divide dough in half and form each into a 1-inch-thick disk. Wrap in plastic wrap and refrigerate for at least 1 to 3 hours, or overnight.</li>
+        <li>When ready to bake, preheat the oven to 350 degrees F (175 degrees C).</li>
+        <li>Working with one disk at a time, and leaving remaining disk in the refrigerator, unwrap chilled dough and place on a lightly floured surface. Working from the center to the edges, roll dough with a floured rolling pin to a thickness of 1/4 inch.</li>
+        <li>Cut dough into desired shapes with cookie cutters, dipping the cutters into flour as needed so they don't stick to the dough. Fit the cookie cutters as closely together as possible to cut as many cookies as you can. This will minimize the number of times you have to re-roll the dough.</li>
+        <li>Transfer gingerbread cookies to ungreased cookie sheets, spacing them 2 inches apart. Gather any dough scraps into a ball, flatten, re-wrap with plastic wrap, and refrigerate to use for later batches.</li>
+        <li>Bake each sheet in the preheated oven until firm, 8 to 10 minutes. Transfer cookies to wire racks to cool while you finish rolling, cutting, and baking the remaining cookies.</li>
+        <li>Frost or decorate cooled gingerbread cookies as desired.</li>
+    </ol>
 </body>
 </html>
