Completed hedgehog_cookies.html --Img/description/Ingredients/Directions

--- a/recipes/hedgehog_cookies.html
+++ b/recipes/hedgehog_cookies.html
@@ -7,6 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hedgehog Cookies</h1>
+    <img src="../img/HedgehogCookies.jpeg" alt="Hedgehog Cookies" height="500">
+    <h2>Description</h2>
+    <p>Cute hedgehog shaped cookies</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>4 Cups All-Purpose Flour</li>
+        <li>3/4 Teaspoon Baking Powder</li>
+        <li>1/2 Teaspoon Baking Soda</li>
+        <li>1/2 Teaspoon Salt</li>
+        <li>1 1/4 Cups White Sugar</li>
+        <li>1 Cup Butter-FLavored Shortening</li>
+        <li>1/4 Cup Corn Syrup</li>
+        <li>2 Eggs</li>
+        <li>1 Tablespoon Vanilla Extract</li>
+        <li>1 Cup Pecans</li>
+        <li>1 Cup Chocolate Chips</li>
+    </ul>
+    <h4>Directions</h4>
+    <ul>
+        <li>Mix flour, baking powder, baking soda, and salt in a bowl. Whisk sugar, shortening, corn syrup, eggs, and vanilla extract in a separate bowl. Stir sugar mixture into flour mixture until just combined. Refrigerate dough until chilled, 30 minutes to 1 hour.</li>
+        <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+        <li>Scoop cookie dough using a cookie scoop or 1 tablespoon so all the cookies are uniform; shape dough into teardrop-shaped cookies. Flatten the pointed side of each cookie to form the 'face'. Arrange cookies on baking sheets.</li>
+        <li>Bake in the preheated oven until golden, 10 to 12 minutes. Cool on the baking sheets for 10 minutes before removing to cool completely on a wire rack.</li>
+        <li>Pulse pecans in a food processor until finely chopped; transfer to a bowl.</li>
+        <li>Melt chocolate chips in the top of a double boiler over simmering water, stirring frequently and scraping down the sides with a rubber spatula to avoid scorching.</li>
+        <li>Dip the top of each cookie in the melted chocolate, spreading to fully coat the 'body' of each hedgehog. Press cookies, chocolate-side down, into the ground pecans forming the 'fur'. Arrange cookies on a sheet of waxed paper to set, about 30 minutes.</li>
+        <li>Transfer the remaining melted chocolate to a piping bag or plastic bag with a corner snipped. Pipe chocolate onto the pointed end of each cookie for eyes and a nose.</li>
+    </ul>
 </body>
 </html>
